Fix layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -30,11 +30,12 @@ body {
 }
 .section {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   width: 100%;
   flex-wrap: wrap;
-  /* flex-direction: column; */
-  align-content: space-between;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
   /* height: 100vh; */
   /* background-image: linear-gradient(to bottom right, #3F0027, #f4f7f8, #f4f7f8); */
   background-color: #3a0024;
