--- a/src/components/page/home/home.css
+++ b/src/components/page/home/home.css
@@ -14,6 +14,7 @@
 
 .content {
     height: 70%;
+    width: 100%;
 }
 
 /* .content__map {
